Fix #32891: Bake to Texture didn't use color management flag properly