source/blender/render/intern/source/rendercore.c
@@ -59,6 +59,7 @@
 #include "BKE_main.h"
 #include "BKE_node.h"
 #include "BKE_texture.h"
+#include "BKE_scene.h"
 
 #include "IMB_imbuf_types.h"
 #include "IMB_imbuf.h"
@@ -2652,6 +2653,8 @@ int RE_bake_shade_all_selected(Render *re, int type, Object *actob, short *do_up
 	ListBase threads;
 	Image *ima;
 	int a, vdone = FALSE, use_mask = FALSE, result = BAKE_RESULT_OK;
+	
+	re->scene_color_manage = BKE_scene_check_color_management_enabled(re->scene);
 	
 	/* initialize render global */
 	R= *re;
